# atomato

./: .gitignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  README  atomato.doap  autogen.sh  configure.in
libatomato/: Makefile.am  atomato-action-provider.c  atomato-action-provider.h  atomato-action.c  atomato.c  atomato.h  dbus-action-provider.c  dbus-action-provider.h  shell-action-provider.c  shell-action-provider.h
po/: ChangeLog  POTFILES.in  POTFILES.skip  ar.po  bn.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  la.po  lt.po  lv.po  nb.po  nds.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sq.po  sr.po  sr@latin.po  sv.po  (+4 more)
services/: Makefile.am
services/desktop/: Desktop.ActivateScreensaver  Desktop.LockScreen  Makefile.am  desktop-session.atomato
services/imaging/: image.py
services/system/: Makefile.am  file_management.atomato  system-file_management.atomato
src/: Makefile.am  atomato-gui.glade  atomato-gui.h  gnome-automator.glade  gui.c  library-list.vala  main-window-callbacks.c  main-window.c  main-window.vala  main.c  main.vala  workflow-editor.vala
src/engine/: Makefile.am  action.vala  aggregate-action.vala  conditional-action.vala  loop-action.vala
tests/: Makefile.am  test-list-actions.c
