AC_PREREQ(2.59)
AC_INIT([Atomato], [2.15.1], [http://bugzilla.gnome.org/enter_bug.cgi?product=atomato], [atomato])
AC_CONFIG_SRCDIR([src/main.vala])

dnl Useful to call aclocal after 'make'
AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")

AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([1.9 foreign])
AM_MAINTAINER_MODE

IT_PROG_INTLTOOL([0.11])

AC_ISC_POSIX
AC_PROG_CC
AC_HEADER_STDC([])
AM_PROG_LIBTOOL
AM_PROG_VALAC

GNOME_COMPILE_WARNINGS(yes)
CFLAGS="$CFLAGS $WARN_CFLAGS"

dnl ******************************************
dnl ** pkg-config dependacy checks          **
dnl ******************************************

VALA_CHECK_MODULES(ATOMATO,
		  glib-2.0
		  gobject-2.0)
AC_SUBST(ATOMATO_CFLAGS)
AC_SUBST(ATOMATO_LIBS)
AC_SUBST(ATOMATO_VALAFLAGS)

VALA_CHECK_MODULES(ATOMATO_GUI, gtk+-3.0)
AC_SUBST(ATOMATO_GUI_CFLAGS)
AC_SUBST(ATOMATO_GUI_LIBS)
AC_SUBST(ATOMATO_GUI_VALAFLAGS)


dnl
dnl Translations
dnl
GETTEXT_PACKAGE=atomato
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[The gettext package])
ALL_LINGUAS="ar bn ca cs da dz de el en_CA en_GB es eu fi fr gl he hu la lt nb nds nl oc pl pt pt_BR ro ru sl sq sr sr@latin sv vi uk zh_CN"
AM_GLIB_GNU_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_CONFIG_FILES([
Makefile
po/Makefile.in
src/Makefile
services/Makefile
services/desktop/Makefile
services/system/Makefile
tests/Makefile])
AC_OUTPUT
